Add some pixel-perfect experiments.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -159,5 +159,8 @@
         "ClickCastFrames",
         "Clique",
         "OmniCD"
+    ],
+    "Lua.diagnostics.disable": [
+        "undefined-field"
     ]
 }
