add "dependent" settings add ColorPickerEditorFrame add customizable name color

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -158,7 +158,9 @@
         "Clicked",
         "ClickCastFrames",
         "Clique",
-        "OmniCD"
+        "OmniCD",
+        "CallbackRegistryMixin",
+        "ColorPickerFrame"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field"
