Add libs to lua ignore directories.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -164,5 +164,8 @@
     ],
     "Lua.diagnostics.disable": [
         "undefined-field"
+    ],
+    "Lua.workspace.ignoreDir": [
+        "Libs"
     ]
 }
