Add missing globals.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -160,7 +160,10 @@
         "Clique",
         "OmniCD",
         "CallbackRegistryMixin",
-        "ColorPickerFrame"
+        "ColorPickerFrame",
+        "RaidFrame",
+        "Settings",
+        "FrameUtil"
     ],
     "Lua.diagnostics.disable": [
         "undefined-field"
